Jeu_de_tests/error/redefinition_global_function.tpc
/* var globale - function */

int f;

void f(void){return ;}

int main(void){return 0;}
